--- a/FirstProjectDevWeb/style.css
+++ b/FirstProjectDevWeb/style.css
@@ -91,12 +91,15 @@ footer p {
 .login-register button {
     padding: 8px 20px;
     margin-top: 10px;
+    margin-right: 10px;
     border: none;
     border-radius: 50px;
     background-color: #007bff;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    display: flex;
+    justify-content: right;
 }
 
 .login-register button:hover {
@@ -133,4 +136,34 @@ footer p {
 }
 #Logo{
     width: 150px;
+    margin-top: -20px;
+}
+#listabolo{
+    border: 2px solid;
+    border-color: white;
+    paddding: 0px;
+    width: 500px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#listapao{
+    border: 2px solid;
+    border-color: white;
+    background-color: white;
+    paddding: 0px;
+    margin: 0px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    align-items: center;
+}
+.imgpao{
+    width: 250px;
+}
+.imgbolo{
+    width:250px;
+    
 }
