--- a/FirstProjectDevWeb/style.css
+++ b/FirstProjectDevWeb/style.css
@@ -1,18 +1,157 @@
-* {
-    margin: 0;
+@import url("https://www.w3schools.com/css/css_font.asp");
+*{
+    margin:0;
     padding: 0;
     box-sizing: border-box;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-header {
-    padding: 20px; 
+#Logo{
+    width: 150px;
+    margin:0;
+    margin-top: -10px;
+    position: absolute;  
+}
+header{    
+    width:1500px;
+    background-color: white;
+}
+#listabolo, #listapao {
+    border: 2px solid;
+    border-color: ;
+    padding: 0px;
+    width: 500px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 600px; 
+}
+.login-register {
+    position: absolute;
+    top: 60px;
+    right: 30px; 
+    width: 450px; 
+    display: flex;
+}
+.login-register button{
+    width: 100px;
+    border-radius: 50px;
+    background-color:transparent;
+    color: black;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: flex;
+    justify-content: center;
+    font-size: 1.1em;
+    font-weight: 500;
+    transition: .5s;
+}
+.login-register button:hover {
+    background-color: #0056b3;
+    color: white;
+}
+.navigation {
+    font-size: 30px;
+    width: 1000px;
+    height: 140px;
+    margin-left: 250px;
+    margin-top: 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    position: relative; 
 }
 
+.navigation a {
+    text-decoration: none;
+    font-weight: 500;
+    color: black;
+    position: relative; 
+}
+
+.navigation a::after {
+    content: '';
+    position: absolute;
+    bottom: -5px; 
+    left: 0%; 
+    transform: translateX(-50%);
+    width: 100%;
+    height: 3px;
+    background: black;
+    border-radius: 2px;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 0.5s;
+}
+
+.navigation a:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
 main {
     background-color: rgb(235, 235, 235);
 }
+.imagem-toda{
+    width: 100%;
+    height: auto;
+}
+.mural{
+    background-color: #ee7300;
+    color: black;
+    cursor: pointer;
+    border-radius: 25px;
+    padding: 0px;
+    width: 150px;
+    height: 25px;
+}
+.receita {
+    background-color: #ee7300;
+    color: black;
+    cursor: pointer;
+    border-radius: 25px;
+    padding: 0px;
+    width: 150px;
+    height: 25px;
+}
 
+.mural,
+.receita {
+    display: inline-block;
+    margin: 0 -330px;
+    margin-left: 600px;
+}
+#listabolo{
+    border: 2px solid;
+    border-color: ;
+    paddding: 0px;
+    margin-left: 200px;
+    width: 500px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#listapao{
+    border: 2px solid;
+    border-color:;
+    background-color: white;
+    paddding: 0px;
+    margin-left: 900px;
+    margin-top: -321px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    align-items: center;
+}
+.imgpao{
+    width: 250px;
+}
+.imgbolo{
+    width:250px;
+}
 footer {
     background-color: rgb(14, 14, 14);
     color: #ffffff;
@@ -39,131 +178,6 @@ footer p {
     margin-top: 10px;
     font-size: 14px;
 }
-
-.imagem-toda{
-    width: 100%;
-    height: auto;
-}
-.nomesite {
-    font-size: 35px;
-    color: #333;
-    margin-bottom: 20px;
-    margin-top: -5px;
-}
-
-.navigation {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-right: 10px;
-}
-
-.navigation a {
-    color: #333;
-    margin: 5px 0;
-    padding: 5px 10px;
-    border-radius: 5px;
-}
-.menu a {
-    color: #333;
-    margin: 0 10px;
-    padding: 10px 40px;
-    border-radius: 50px;
-    font-size: 32px;
-    text-align: center;
-    align-items: center;
-    border: 2px solid;
-}
-
-.login-register {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.login-register input[type="text"] {
-    padding: 8px;
-    margin-right: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
-
-.login-register button {
-    padding: 8px 20px;
-    margin-top: 10px;
-    margin-right: 10px;
-    border: none;
-    border-radius: 50px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    display: flex;
-    justify-content: right;
-}
-
-.login-register button:hover {
-    background-color: #0056b3;
-}
-
-.menu {
-    text-align: center;
-    margin-top: -55px;
-}
-
-.login-register {
-    text-align: right;
-    margin-top: -45px;
-}
-
-.mural{
-    background-color: #ee7300;
-    color: black;
-    cursor: pointer;
-    border-radius: 25px;
-    padding: 0px;
-    width: 50px;
-    height: 25px;
-}
-.receita {
-    background-color: #ee7300;
-    color: black;
-    cursor: pointer;
-    border-radius: 25px;
-    padding: 0px;
-    width: 50px;
-    height: 25px;
-}
-#Logo{
-    width: 150px;
-    margin-top: -20px;
-}
-#listabolo{
-    border: 2px solid;
-    border-color: white;
-    paddding: 0px;
-    width: 500px;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-#listapao{
-    border: 2px solid;
-    border-color: white;
-    background-color: white;
-    paddding: 0px;
-    margin: 0px;
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: right;
-    align-items: center;
-}
-.imgpao{
-    width: 250px;
-}
-.imgbolo{
-    width:250px;
-    
+#sugestao {
+    text-align: left;
 }
